Generate the design canvas's tokens from HideTheme and fail on drift (#49)
* Route design work to one Paper canvas and convert existing mockups into it

AGENTS.md names the Paper file that holds screen designs and layout
proposals, and states the one-way direction of truth: HideTheme.swift
defines a value, the canvas receives it as a token.

scripts/paper-inline.mjs converts a class-based canvas page into the
inline-styled markup Paper accepts. Paper discards a <style> block along
with every element that depended on it, and renders nothing for a <use>
reference once its <defs> are gone, so a page pastes in empty without
this. The script flattens the stylesheet, splices icon symbols in at
their use sites with currentColor resolved, renames the page's custom
properties to the token names, expands the font shorthand, drops margin,
pins bare text spans open in a flex row, and reports what it could not
convert.

* checkpoint: design, scripts (3 new)

* Generate the design canvas's tokens from HideTheme and fail on drift

The design canvas and the shell both carry the same token values, and a value
restated in two places is how they drift. HideTheme.swift owns a token; the
canvas is a consumer of it, the same way a Swift view is, so the canvas's mapped
variables are now generated from the Swift rather than maintained beside it.

- scripts/pen-tokens.mjs parses HideTheme.swift, including derived values whose
  expression is arithmetic over other constants, and answers what each mapped
  variable should be.
- scripts/pen-token-map.json records which constant each canvas variable carries,
  and why each remaining constant stays out.
- scripts/gen-pen-tokens.mjs writes those values into design/hide.pen, leaving
  every node and every design-authored variable untouched.
- scripts/check-pen-tokens.mjs refuses a canvas that disagrees, and refuses a
  HideTheme constant claimed by neither list: a token can otherwise reach the
  shell and never reach the design, and nothing would 